Quality Work & Steps Sections

--- a/index.html
+++ b/index.html
@@ -110,6 +110,65 @@
                 </div>
             </div>
         </section>
+
+        <section id="quality__work">
+            <div class="row">
+                <div class="quality__work--container">
+                    <div class="quality__work--desc">
+                        <h5><span class="purple">Quality Work</span></h5>
+                        <h2>Designed & Developed by <span class="purple">Professionals.</span></h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <button>Learn More</button>
+                    </div>
+                    <div class="quality__work--img">
+                        <img src="./assets/quality_work.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="steps">
+            <div class="row">
+                <div class="steps__container">
+                    <div class="steps__img">
+                        <img src="./assets/steps.png" alt="">
+                    </div>
+                    <div class="steps__instructions">
+                        <h5><span class="purple">Steps</span></h5>
+                        <h2>Easy to <span class="purple">Get Started</span></h2>
+                        <ul>
+                            <li class="step__list">
+                                <div class="step__number">
+                                    01
+                                </div>
+                                <div class="step__text">
+                                    <h6>Register</h6>
+                                    <p>Create an account with us using Google or Facebook.</p>
+                                </div>
+                            </li>
+                            <li class="step__list">
+                                <div class="step__number">
+                                    02
+                                </div>
+                                <div class="step__text">
+                                    <h6>Download</h6>
+                                    <p>Browse and Download the template that you like from the marketplace.</p>
+                                </div>
+                            </li>
+                            <li class="step__list">
+                                <div class="step__number">
+                                    03
+                                </div>
+                                <div class="step__text">
+                                    <h6>Run</h6>
+                                    <p>Follow the instructions to setup and customize the template to your needs.</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>  
     </main>
 </body>
 </html>
