--- a/index.html
+++ b/index.html
@@ -169,6 +169,71 @@
                 </div>
             </div>
         </section>  
+
+        <section id="pricing">
+            <div class="row">
+                <div class="pricing__container">
+                    <div class="pricing__header">
+                        <h5><span class="purple">Pricing</span></h5>
+                        <h2>Reasonable & Flexible <span class="purple">Plans.</span></h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                    <div class="plans">
+                        <div class="plan">
+                            <div class="plan__header">
+                                <span class="name">Personal</span>
+                                <span class="price">$17.99</span>
+                                <span class="duration">Monthly</span>
+                            </div>
+                            <div class="plan__features">
+                                <span class="feature mainFeature">For Individuals</span>
+                                <span class="feature">30 Templates</span>
+                                <span class="feature">7 Landing Pages</span>
+                                <span class="feature">12 Internal Pages</span>
+                                <span class="feature">Basic Assistance</span>
+                            </div>
+                            <div class="plan__action">
+                                <button class="buy">Buy Now</button>
+                            </div>
+                        </div>
+                        <div class="plan">
+                            <div class="plan__header">
+                                <span class="name">Personal</span>
+                                <span class="price">$17.99</span>
+                                <span class="duration">Monthly</span>
+                            </div>
+                            <div class="plan__features">
+                                <span class="feature mainFeature">For Individuals</span>
+                                <span class="feature">30 Templates</span>
+                                <span class="feature">7 Landing Pages</span>
+                                <span class="feature">12 Internal Pages</span>
+                                <span class="feature">Basic Assistance</span>
+                            </div>
+                            <div class="plan__action">
+                                <button class="buy">Buy Now</button>
+                            </div>
+                        </div>
+                        <div class="plan">
+                            <div class="plan__header">
+                                <span class="name">Personal</span>
+                                <span class="price">$17.99</span>
+                                <span class="duration">Monthly</span>
+                            </div>
+                            <div class="plan__features">
+                                <span class="feature mainFeature">For Individuals</span>
+                                <span class="feature">30 Templates</span>
+                                <span class="feature">7 Landing Pages</span>
+                                <span class="feature">12 Internal Pages</span>
+                                <span class="feature">Basic Assistance</span>
+                            </div>
+                            <div class="plan__action">
+                                <button class="buy">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
